--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "social",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://coder-developer-a.github.io/social",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -11,6 +11,7 @@
     "bootstrap-icons": "^1.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
