--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "social",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://coder-developer-a.github.io/my-app",
+  "homepage": "https://coder-developer-a.github.io/social",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
